<resources>
    <string name="app_name">Заметки</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Настройки</string>
    <string name="name">Название</string>
    <string name="adding_note">Добавление заметки</string>
    <string name="content">Содержание</string>
    <string name="save">Сохранить</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="all_notes">Все заметки</string>
    <string name="creating_category">Создание категории</string>
    <string name="ok">OK</string>
    <string name="field_is_empty">Поле пусто!</string>
    <string name="cancel">Отмена</string>
    <string name="category_with_this_name_already_exists">Категория с таким именем уже существует!</string>
    <string name="category_was_created">Категория создана</string>
    <string name="categories">Категории</string>
    <string name="create_category">Создать категорию</string>
    <string name="choose_categories">Выберите категории</string>
    <string name="to_choose_categories">Выбрать категории</string>
    <string name="no_created_categories">Нет созданных категорий</string>
    <string name="without_categories">Вне категорий</string>
    <string name="viewing_note">Просмотр заметки</string>
    <string name="modifying_note">Изменение заметки</string>
    <string name="note_was_updated">Заметка была обновлена</string>
    <string name="note_has_been_deleted">Заметка удалена</string>
    <string name="undo">Отменить</string>
    <string name="no_notes">Заметок нет</string>
    <string name="send">Отправить</string>
    <string name="remove">Удалить</string>
    <string name="sure_you_want_to_delete_note">Вы действительно хотите удалить эту заметку?</string>
    <string name="warning">Внимание</string>
    <string name="note_was_removed">Заметка удалена</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="category_icon_description">Цветная иконка категории</string>
    <string name="use_dark_theme">Использовать темную тему</string>
    <string name="about">Об авторе</string>
    <string name="developer_info">Разработчик: Иван Руднев</string>
    <string name="developer_url">https://park.mail.ru/profile/i.rudnev/</string>
    <string name="undo_editing">Отменить редактирование?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="undo_adding_note">Отменить создание заметки?</string>
    <string name="remove_category">Удалить категорию</string>
    <string name="clear_category">Очистить категорию</string>
    <string name="want_to_clear_category">Вы действительно хотите удалить все заметки с данной категорией?</string>
    <string name="want_to_remove_category">Вы действительно хотите удалить эту категорию?</string>
    <string name="note_was_created">Заметка создана</string>
    <string name="this_category_cant_be_removed">Эту категорию нельзя удалить</string>
    <string name="change_category">Изменить категорию</string>
    <string name="updating_category">Изменение категории</string>
    <string name="category_was_removed">Категория удалена</string>
    <string name="category_was_updated">Категория обновлена</string>
    <string name="category_was_cleared">Категория очищена</string>
    <string name="delete_all">Удалить все</string>
    <string name="want_to_delete_all_notes">Вы действительно хотите удалить все заметки?</string>
    <string name="edit_note">Изменить заметку</string>
</resources>
