<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item  android:title="@string/categories" android:id="@+id/submenu_categories">
        <menu>
        <item
            android:id="@+id/nav_all_notes"
            android:title="@string/all_notes" />
        <item
            android:id="@+id/nav_add_category"
            android:title="@string/create_category"
            />
        </menu>
    </item>

    <item android:title="Communicate"
        android:id="@+id/submenu_support">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
