<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0000000">

    <TextView
        android:text="@string/developer_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_dev"
        android:layout_marginBottom="26dp"
        android:textColor="@color/white"
        android:layout_above="@+id/dev_url"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/developer_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dev_url"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:autoLink="web"/>

    <Button
        android:text="@string/ok"
        android:background="@drawable/transparent_btn_with_border"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:textColor="@color/white"
        android:onClick="closeActivity"/>

</RelativeLayout>